// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should open the popup when the button is clicked 1`] = `
Array [
  Array [
    "changelog",
    undefined,
  ],
]
`;

exports[`should open the popup when the button is clicked 2`] = `
<BubblePopupHelper
  isOpen={true}
  popup={
    <ChangelogPopup
      issue={
        Object {
          "author": "john.david.dalton@gmail.com",
          "creationDate": "2017-03-01T09:36:01+0100",
          "key": "issuekey",
        }
      }
      onFail={[Function]}
    />
  }
  position="bottomright"
  togglePopup={[Function]}
>
  <button
    className="button-link issue-action issue-action-with-options js-issue-show-changelog"
    onClick={[Function]}
    title="March 1, 2017 9:36 AM"
  >
    <span
      className="issue-meta-label"
    >
      a month ago
    </span>
    <i
      className="icon-dropdown little-spacer-left"
    />
  </button>
</BubblePopupHelper>
`;

exports[`should render correctly 1`] = `
<BubblePopupHelper
  isOpen={false}
  popup={
    <ChangelogPopup
      issue={
        Object {
          "author": "john.david.dalton@gmail.com",
          "creationDate": "2017-03-01T09:36:01+0100",
          "key": "issuekey",
        }
      }
      onFail={[Function]}
    />
  }
  position="bottomright"
  togglePopup={[Function]}
>
  <button
    className="button-link issue-action issue-action-with-options js-issue-show-changelog"
    onClick={[Function]}
    title="March 1, 2017 9:36 AM"
  >
    <span
      className="issue-meta-label"
    >
      a month ago
    </span>
    <i
      className="icon-dropdown little-spacer-left"
    />
  </button>
</BubblePopupHelper>
`;
